Testcontainers-boot: kafka added, docker compose included.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,22 @@ spring:
   data:
     cassandra:
       local-datacenter: dc1
+  kafka:
+    bootstrap-servers: localhost:9092
+    admin:
+      fail-fast: true
+    consumer:
+      key-deserializer: org.apache.kafka.common.serialization.IntegerDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.IntegerSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+
+kafka:
+  producer:
+    auto-start: true
+    topic: testcontainers-boot-test-topic
+  consumer:
+    auto-start: true
+    topic: testcontainers-boot-test-topic
+    group-id: Kafkassandra-group
